update form, detail, description, and versioning
update form, detail, description, and versioning

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:joF9F2byAljnf0DFkpNtt6AXIOzGPbSKBgDFG++xKko=
 APP_DEBUG=true
 APP_URL=http://localhost/dev/project-bimtek-registrasi-online-fixed/public
+APP_VERSION=V1.0.0
 
 LOG_CHANNEL=stack
 
